welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:7: error: type mismatch;
 found   : Int
 required: Nothing
      T(i+k)=k
             ^