welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array(14)
  var k =0
  for (j <- 0 to T.length -1){
    k = k +1
    for (i <- 0 to j) {
      T(i+k)=k
    }
  }
  return T(num-1)
}